Bug 161537 - in BASE using a Form Based Filter Search, Filter Navigator no longer shows the name of the field
Summary: in BASE using a Form Based Filter Search, Filter Navigator no longer shows th...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-06-12 18:57 UTC by sdritchey
Modified: 2024-07-22 21:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Filter Navigator screenshot showing missing names. (30.28 KB, image/png)
2024-06-12 18:58 UTC, sdritchey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sdritchey 2024-06-12 18:57:15 UTC
Description:
Using LO 7.6.7, I’m having an issue in Base when using Form-Based Filters to SEARCH / SEARCHING my database.

When using Form-Based Filters, the Filter Navigator no longer shows the name of the field next to the TRUE / FALSE field value. This is for Checkboxes in my Database Form. Confirmed same issue in LO 24.2.4.

Previous versions eg the 7.5 series displayed the field names next to the values, this was super helpful for modifying a search using the Filter Navigator.

Steps to Reproduce:
1. Open a Database Form and click on Form Based Filters
2. Enter search terms into the Database Form
3. Look in Filter Navigator, find no Field Names listed next to search terms.

Actual Results:
no Field Names listed next to search terms

Expected Results:
Field Names should be listed next to search terms


Reproducible: Always


User Profile Reset: No

Additional Info:
none
Comment 1 sdritchey 2024-06-12 18:58:23 UTC
Created attachment 194687 [details]
Filter Navigator screenshot showing missing names.

Filter Navigator screenshot showing missing names.
Comment 2 Robert Großkopf 2024-06-12 19:40:35 UTC
Bug doesn't appear in LO 7.5.5.2, appears here with LO 7.6.4.1 and all newer versions of LO.
No field name will be shown by the form based filter any more.
See also https://ask.libreoffice.org/t/base-form-based-filter-search/106826/3 for more screenshots, could be tested with any form in a database file. Take this for example: https://bugs.documentfoundation.org/attachment.cgi?id=193905
Comment 3 raal 2024-06-19 21:21:41 UTC
It doesn't work in GEN Version: 24.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 1b61abc4451d38984338b750d85770ec9871060a
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

but works in GTK3.

This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Jim Raykowski ; Could you possibly take a look at this one?
Thanks
 5860e1c8208d0ecc254a53733c0d68c915e2785a is the first bad commit
commit 5860e1c8208d0ecc254a53733c0d68c915e2785a
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sat Oct 28 18:10:11 2023 +0200

    source 4bc86f6477c3ed5f0e97b0a530acf7e102b613b3

150451: tdf#38194 tdf#106556 Enhancement to highlight direct formatting, | https://gerrit.libreoffice.org/c/core/+/150451
Comment 4 Jim Raykowski 2024-06-21 01:26:33 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/169310

Thanks raal for the bibisect work and Robert for the link to the example database file. I also found more examples that I think you have done at:
https://wiki.documentfoundation.org/images/5/52/Sample-databases.zip
Comment 5 Commit Notification 2024-06-21 16:30:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5bbbe987321d8f9e101fab9d67ddbf3d4f8dfca

tdf#161537 fix Filter Navigator no longer shows the name of the field

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-07-08 13:48:46 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f9c31bf18461d9d713929d74623d964dab8ae1f9

tdf#161537 fix Filter Navigator no longer shows the name of the field

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 sdritchey 2024-07-22 21:12:49 UTC
(In reply to Commit Notification from comment #6)
> Jim Raykowski committed a patch related to this issue.
> It has been pushed to "libreoffice-24-8":
> 
> https://git.libreoffice.org/core/commit/
> f9c31bf18461d9d713929d74623d964dab8ae1f9
> 
> tdf#161537 fix Filter Navigator no longer shows the name of the field
> 
> It will be available in 24.8.0.0.beta2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Thank you Jim, just tested 24.8.0 RC1 and this seems to be fixed for me.  I am seeing the previous behavior with the Field Names listed next to search terms.  I will continue to test new versions and update here with any additional issues.
Comment 8 Jim Raykowski 2024-07-22 21:29:14 UTC
@sdritchey Thanks for testing! I've marked the bug as RESOLVED FIXED. Perhaps you would mark it as VERIFIED FIXED.
Comment 9 sdritchey 2024-07-22 21:32:39 UTC
Just tested 24.8.0 RC1 and this seems to be fixed for me.