tdf#161537 fix Filter Navigator no longer shows the name of the field

Change-Id: I3dae3458ac5795b217743b1e6897345a22f1bf61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169310
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Tested-by: Jenkins
(cherry picked from commit c5bbbe987321d8f9e101fab9d67ddbf3d4f8dfca)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169486
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>