svx/source/form/filtnav.cxx
@@ -1061,7 +1061,7 @@ FmFilterNavigator::FmFilterNavigator(vcl::Window* pTopLevel, std::unique_ptr<wel
 
     m_xTreeView->connect_custom_get_size(LINK(this, FmFilterNavigator, CustomGetSizeHdl));
     m_xTreeView->connect_custom_render(LINK(this, FmFilterNavigator, CustomRenderHdl));
-    m_xTreeView->set_column_custom_renderer(0, true);
+    m_xTreeView->set_column_custom_renderer(1, true);
 
     m_xTreeView->connect_changed(LINK(this, FmFilterNavigator, SelectHdl));
     m_xTreeView->connect_key_press(LINK(this, FmFilterNavigator, KeyInputHdl));
